--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 <!-- top nav -->
               	<div class="navbar navbar-blue navbar-static-top">  
                     <div class="navbar-header">
-                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".top-navbar-collapse">
                         <span class="sr-only">Toggle</span>
                         <span class="icon-bar"></span>
           				<span class="icon-bar"></span>
           				<span class="icon-bar"></span>
                       </button>
                   	</div>
-                  	<nav class="collapse navbar-collapse" role="navigation">
+                  	<nav class="collapse navbar-collapse top-navbar-collapse" role="navigation">
                     <form class="navbar-form navbar-left">
                         <div class="input-group input-group-sm" style="max-width:360px;">
                           <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
@@ -74,16 +74,10 @@
                     </form> 
                     <ul class="nav navbar-nav">
                       <li>
-                        <a href="#">Home</a>
-                      </li>
-                      <li>
                         <a href="#postModal" role="button" data-toggle="modal">Chat</a>
                       </li>
                       <li>
-                        <a href="#" id="help"><span class="badge">Help</span></a>
-                      <li>
-                        <a href="#"><span class="badge">Invert Colors</span></a>
-                      </li>
+                        <a href="#" id="help"><span class="badge">Help</span></a>                     
                       </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -121,6 +115,7 @@
                                         <div><div></div></div>
                                         <div><div></div></div>
                                     </div>
+                                    <div id="typed"><label id="Smiley_Message"></label></div>
                                 </div>
                                 <!--/.well -->
                             </div>
@@ -354,6 +349,7 @@
         <script language="javascript" type="text/javascript" src="js/fullcalendar.min.js"></script> 
         <script language="javascript" type="text/javascript" src="js/speechrecognization.js"></script>
         <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+        <script src="js/typed.js"></script>
         <script src="js/scripts.js"></script>
 
 	</body>
