--- a/user.html
+++ b/user.html
@@ -29,7 +29,7 @@
                 <ul class="nav hidden-xs" id="lg-menu">
                     <a href="index.html" class="slidebar_logo"></a>
                     <li class="active"><a href="#featured"><i class="glyphicon glyphicon-home-gh"></i> Home</a></li>
-                    <li><a href="#stories"><i class="glyphicon glyphicon-schedule-gh"></i> Schedule an Appointment </a></li>
+                    <li><a href="schedule.html"><i class="glyphicon glyphicon-schedule-gh"></i> Schedule an Appointment </a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-myaccount-gh"></i> View My Appointment</a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-contact-gh"></i> Contact</a></li>
                 </ul>
@@ -41,8 +41,8 @@
               
               	<!-- tiny only nav-->
               <ul class="nav visible-xs" id="xs-menu">
-                  	<li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-home-gh"></i></a></li>
-                    <li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-schedule-gh"></i></a></li>
+                  	<li class="active"><a href="#" class="text-center"><i class="glyphicon glyphicon-home-gh"></i></a></li>
+                    <li><a href="schedule.html" class="text-center"><i class="glyphicon glyphicon-schedule-gh"></i></a></li>
                   	<li><a href="#" class="text-center"><i class="glyphicon glyphicon-myaccount-gh"></i></a></li>
                     <li><a href="#" class="text-center"><i class="glyphicon glyphicon-contact-gh"></i></a></li>
                 </ul>
@@ -137,6 +137,8 @@
         <script src="js/typed.js"></script>
         <script src="js/JSONSelect.js"></script>
         <script src="js/user_scripts.js"></script>
+        <script src="js/jquery.validate.js"></script>
+
 
 	</body>
 </html>
