--- a/user.html
+++ b/user.html
@@ -30,7 +30,7 @@
                     <a href="index.html" class="slidebar_logo"></a>
                     <li class="active"><a href="#featured"><i class="glyphicon glyphicon-home-gh"></i> Home</a></li>
                     <li><a href="schedule.html"><i class="glyphicon glyphicon-schedule-gh"></i> Schedule an Appointment </a></li>
-                    <li><a href="#"><i class="glyphicon glyphicon-myaccount-gh"></i> View My Appointment</a></li>
+                    <li><a href="myappointments.html"><i class="glyphicon glyphicon-myaccount-gh"></i> View My Appointment</a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-contact-gh"></i> Contact</a></li>
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
@@ -43,7 +43,7 @@
               <ul class="nav visible-xs" id="xs-menu">
                   	<li class="active"><a href="#" class="text-center"><i class="glyphicon glyphicon-home-gh"></i></a></li>
                     <li><a href="schedule.html" class="text-center"><i class="glyphicon glyphicon-schedule-gh"></i></a></li>
-                  	<li><a href="#" class="text-center"><i class="glyphicon glyphicon-myaccount-gh"></i></a></li>
+                  	<li><a href="myappointments.html" class="text-center"><i class="glyphicon glyphicon-myaccount-gh"></i></a></li>
                     <li><a href="#" class="text-center"><i class="glyphicon glyphicon-contact-gh"></i></a></li>
                 </ul>
               
