--- a/schedule.html
+++ b/schedule.html
@@ -12,110 +12,6 @@
 		<![endif]-->
 		<link href="css/styles.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
-        <style>
-            form{
-                        font-family: 'Lato', sans-serif;
-
-            }
-
-                h1 {
-                  margin: 0 0 30px 0;
-                  text-align: center;
-                }
-
-                input[type="text"],
-                input[type="password"],
-                input[type="date"],
-                input[type="datetime"],
-                input[type="email"],
-                input[type="number"],
-                input[type="search"],
-                input[type="tel"],
-                input[type="time"],
-                input[type="url"],
-                textarea,
-                select {
-                  background: rgba(255,255,255,0.1);
-                  border: none;
-                  font-size: 16px;
-                  height: auto;
-                  margin: 0;
-                  outline: 0;
-                  padding: 10px;
-                  width: 100%;
-                  background-color: #E8E8E8;
-                  color: #8a97a0;
-                  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-                  margin-bottom: 30px;
-                }
-
-                input[type="radio"],
-                input[type="checkbox"] {
-                  margin: 0 4px 8px 0;
-                }
-
-                select {
-                  padding: 6px;
-                  height: 32px;
-                  border-radius: 2px;
-                }
-                input:focus{
-                    border: 1px solid #07DA0F;
-                }
-
-                .error{
-                    color: red;
-                }
-                button {
-                  padding: 19px 19px 18px 19px;
-                  color: #FFF;
-                  background-color: #4bc970;
-                  font-size: 18px;
-                  text-align: center;
-                  font-style: normal;
-                  border-radius: 5px;
-                  width: 100%;
-                  border: 1px solid #3ac162;
-                  border-width: 1px 1px 3px;
-                  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
-                  margin-bottom: 10px;
-                  cursor: pointer;
-                }
-
-                fieldset {
-                  margin-bottom: 30px;
-                  border: none;
-                }
-
-                legend {
-                  font-size: 1.4em;
-                  margin-bottom: 10px;
-                }
-
-                label {
-                  display: block;
-                  margin-bottom: 2px;
-                }
-
-                label.light {
-                  font-weight: 300;
-                  display: inline;
-                }
-
-                .number {
-                  background-color: #5fcf80;
-                  color: #fff;
-                  height: 30px;
-                  width: 30px;
-                  display: inline-block;
-                  font-size: 0.8em;
-                  margin-right: 4px;
-                  line-height: 30px;
-                  text-align: center;
-                  text-shadow: 0 1px 0 rgba(255,255,255,0.2);
-                  border-radius: 100%;
-                }
-        </style>
 	</head>
 	<body>
 <div class="wrapper">
@@ -133,7 +29,7 @@
                     <a href="index.html" class="slidebar_logo"></a>
                     <li ><a href="user.html"><i class="glyphicon glyphicon-home-gh"></i> Home</a></li>
                     <li class="active"><a href="#"><i class="glyphicon glyphicon-schedule-gh"></i> Schedule an Appointment </a></li>
-                    <li><a href="#"><i class="glyphicon glyphicon-myaccount-gh"></i> View My Appointment</a></li>
+                    <li><a href="myappointments.html"><i class="glyphicon glyphicon-myaccount-gh"></i> View My Appointment</a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-contact-gh"></i> Contact</a></li>
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
@@ -146,7 +42,7 @@
               <ul class="nav visible-xs" id="xs-menu">
                   	<li><a href="user.html" class="text-center"><i class="glyphicon glyphicon-home-gh"></i></a></li>
                     <li><a href="#" class="text-center"><i class="glyphicon glyphicon-schedule-gh"></i></a></li>
-                  	<li><a href="#" class="text-center"><i class="glyphicon glyphicon-myaccount-gh"></i></a></li>
+                  	<li><a href="myappointments.html" class="text-center"><i class="glyphicon glyphicon-myaccount-gh"></i></a></li>
                     <li><a href="#" class="text-center"><i class="glyphicon glyphicon-contact-gh"></i></a></li>
                 </ul>
               
