--- a/schedule-janine.html
+++ b/schedule-janine.html
@@ -291,6 +291,24 @@
                                         <div id="typed">
                                             <label id="Smiley_Message"></label>
                                         </div>
+                                        <label class="commands"> list of commands</label>
+                                        <label class="commands">--------</label>
+                                        <label class="commands">schedule appointment: go to schedule appointment page</label>
+                                        <label class="commands">go to home: navigate to home page</label>
+                                        <label class="commands">my appointments: view my appointments</label>
+                                        <label class="commands">next: to navigate to next month/day/week</label>
+                                        <label class="commands">previous: to navigate to next month/day/week</label>
+                                        <label class="commands">Go to {month}: to navigate to specific month</label>
+                                        <label class="commands">Go to {year}: to navigate to specific year</label>
+                                        <label class="commands">First {input}: key in first name</label>
+                                        <label class="commands">last {input}: key in last name</label>
+                                        <label class="commands">phone {input}: key in phone number</label>
+                                        <label class="commands">email {input}: key in email</label>
+                                        <label class="commands">open chat: open chat window</label>
+                                        <label class="commands">send: send chat message</label>
+                                        <label class="commands">submit: submit form</label>
+                                        <label class="commands">Thank you: close chat or help</label>
+
                                     </div>
                                     <!--/.well -->
                                 </div>
